<resources>
    <string name="app_name">ISS Tracker</string>
    <string name="map_activity">Map</string>
    <string name="flybys_title">Passing By</string>
    <string name="help_title">About</string>
    <string name="label_location">Flybys</string>
    <string name="label_people_in_space">On Duty</string>
    <string name="label_setting">Settings</string>
    <string name="label_help">Help</string>
    <string name="label_stream">Live!</string>
    <string name="midAt"> at </string>
    <string name="countryFlagContentDescription">Country flag this astronaut is from</string>
    <string name="astronautTwitterContentDescription">Icon to link to astronauts twitter page</string>
    <string name="astronautWikiContentDescription">Icon to link to astronauts wiki page</string>
    <string name="astronautGoogleContentDescription">Icon to link to astronauts Google search page</string>
    <string name="refreshTitle">Refresh Rate</string>
    <string name="refreshSummary">Amount of time before updating ISS location on map</string>
    <string name="lockTitle">Lock ISS</string>
    <string name="lockSummary">Lock onto ISS and follow it on the map</string>
    <string name="infoTitle">Additional Info</string>
    <string name="infoSummary">Provide additional information about ISS on the map</string>
    <string name="mapTitle">Map type</string>
    <string name="mapSummary">Change the map type</string>
    <string name="decimalTitle">Decimal Places</string>
    <string name="decimalSummary">Change the accuracy of all numerical values</string>
    <string name="sizeTitle">Prediction line size</string>
    <string name="sizeSummary">Change the size of ISSs prediction line</string>
    <string name="textSizeTitle">Text size</string>
    <string name="textSizeSummary">Change the size of all text values on map</string>
    <string name="notificationTitle">ISS Notification</string>
    <string name="notificationSummary">Notify when ISS is expected to fly over my location</string>
    <string name="errorLocation">Unable to find your location.</string>
    <string name="errorPermissionLocation">Denied access to your location</string>
    <string name="nothing_available">There are no ISS passes by your location at this time</string>
    <string name="unable_to_get_astronauts">Unable to get astronauts. Make sure you are connected to the internet and try again later</string>
    <string name="unable_to_get_passes">Unable to get ISS passes. Make sure you are connected to the internet and try again later</string>
    <string name="errorMap">Can not apply settings to map</string>
    <string name="errorFiveTimes">Failed all 5 times. Either you have no connection or server is overloaded.</string>
    <string name="errorLessFive">Request to server failed. Retrying…</string>
    <string name="errorNoWiki"> does not have a wiki page</string>
    <string name="errorNoTwitter"> does not have a Twitter account</string>
    <string name="errorNoInstagram"> does not have a Instagram account</string>
    <string name="errorNoFacebook"> does not have a Facebook account</string>
    <string name="data_corrupted">App data is corrupted. Resetting!</string>
    <string name="polyError">Unable in creating prediction line</string>
    <string name="calendar">Calendar</string>
    <string name="share">Share</string>
    <string name="image_content">Image of a map with a marker for user location.</string>
    <string name="iss_sighting_share_title">ISS Sighting</string>
    <string name="iss_sighting_share_description">ISS will be visible here. Going to check it out!</string>
    <string name="iss_sighting_share_body">"Check it out! ISS will be visible at "</string>
    <string name="iss_sighting_share_chooser">Share…</string>
    <string name="on">" on "</string>
    <string name="since">"Launched "</string>
    <string name="license">Open source licenses</string>
    <string name="msg_license">This application is constructed using following software:</string>
    <string name="msg_about_library_description">Track the International Space Station in real time, view upcoming visible passes and sky paths for your location, follow the current crew, watch live streams, and enable alerts for the best viewing opportunities.</string>
    <string name="desc_about_app">About this app</string>
    <string name="version">Versions</string>
    <string name="version_msg">List of previous changes, fixes, and updates:</string>
    <string name="refresh_stats_every_seconds">Refresh stats every %1$d seconds</string>
    <string name="change_the_thickness_of_the_prediction_line">Change the thickness of the prediction line</string>
    <string name="starts">Starts: %1$s</string>
    <string name="duration">Duration: %1$s</string>
    <string name="ad_attribution">Ad</string>
    <string name="ad_icon">Ad Icon</string>
    <string name="app_ID_Main" translatable="false">ca-app-pub-1850763013639682~8939815838</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1850763013639682/4298913050</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-1850763013639682/1377236244</string>
    <string name="app_open_ad_unit_id" translatable="false">ca-app-pub-1850763013639682/9402033285</string>
    <string name="locations_native_ad_unit_id" translatable="false">ca-app-pub-1850763013639682/9845698217</string>
    <string name="on_duty_native_ad_unit_id" translatable="false">ca-app-pub-1850763013639682/4740210185</string>
    <string name="rewarded_ad_unit_id" translatable="false">ca-app-pub-1850763013639682/9671547864</string>
    <string name="legal_title">Legal Jibber Jabber</string>
    <string name="support_title">Support</string>
    <string name="contact_support">Contact support</string>
    <string name="contact_support_description">Report pass predictions, notifications, ads, or other issues</string>
    <string name="support_email" translatable="false">restartapplication@gmail.com</string>
    <string name="support_email_subject">ISS Tracker support</string>
    <string name="support_email_body">Hi,\n\nI need help with ISS Tracker.\n\nApp version: %1$s\n\n</string>
    <string name="no_email_app_available">No email app available</string>
    <string name="rate_app">Rate ISS Tracker</string>
    <string name="rate_app_description">Open the store listing for this app</string>
    <string name="share_app">Share ISS Tracker</string>
    <string name="share_app_description">Send the app link to someone else</string>
    <string name="share_app_text">Track the International Space Station with ISS Tracker: %1$s</string>
    <string name="no_share_app_available">No share app available</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="nasa_live">NASA Live</string>
    <string name="live_stream">Live Stream</string>
    <string name="stream_offline">Stream Offline</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_description">Watch a short video to remove ads for the current session?</string>
    <string name="failed_to_load_ad">Failed to load ad</string>
    <string name="watch_video">Watch Video</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="not_yet">Not yet</string>
    <string name="try_again">Try again</string>
    <string name="refresh">Refresh</string>
    <string name="open">Open</string>
    <string name="open_settings">Open Settings</string>
    <string name="open_settings_lowercase">Open settings</string>
    <string name="update">Update</string>
    <string name="manage">Manage</string>
    <string name="got_it">Got it</string>
    <string name="back">Back</string>
    <string name="nav_map">Map</string>
    <string name="nav_sky_path">Sky Path</string>
    <string name="nav_on_duty">On Duty</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="rating_prompt_title">Enjoying ISS Tracker?</string>
    <string name="rating_prompt_message">If the app has been useful, would you like to rate it?</string>
    <string name="about_feature_live_map">Live map</string>
    <string name="about_feature_sky_paths">Sky paths</string>
    <string name="about_feature_pass_alerts">Pass alerts</string>
    <string name="about_feature_live_streams">Live streams</string>
    <string name="about_feature_crew_info">Crew info</string>
    <string name="version_details_format">Version %1$s (%2$d)</string>
    <string name="version_details_name_only_format">Version %1$s</string>
    <string name="iss_marker_title">ISS</string>
    <string name="iss_marker_snippet">International Space Station</string>
    <string name="map_error_format">Error: %1$s</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="select_stream">Select Stream</string>
    <string name="altitude">Altitude</string>
    <string name="velocity">Velocity</string>
    <string name="visibility">Visibility</string>
    <string name="altitude_km_format">Altitude: %1$s km</string>
    <string name="velocity_kph_format">Velocity: %1$s kph</string>
    <string name="visibility_format">Visibility: %1$s</string>
    <string name="visibility_eclipsed">Eclipsed</string>
    <string name="visibility_daylight">Daylight</string>
    <string name="unable_to_load_crew">Unable to load crew</string>
    <string name="unable_to_load_crew_message">We could not get the latest astronaut and expedition details. Check your connection and try again.</string>
    <string name="no_crew_data_available">No crew data available</string>
    <string name="no_crew_data_available_message">Crew information is not available right now. Please check again later.</string>
    <string name="could_not_load_bio">Could not load bio.</string>
    <string name="biography_not_available">Biography not available</string>
    <string name="expedition_format">Expedition %1$s</string>
    <string name="expedition_patch">Expedition Patch</string>
    <string name="country_flag">Flag</string>
    <string name="launched_on_format">Launched on %1$s</string>
    <string name="return_on_format">Return on %1$s</string>
    <string name="astronaut_role_on_craft_format">%1$s on %2$s</string>
    <string name="sky_path_location_needed">Location needed</string>
    <string name="sky_path_location_needed_message">Sky Path needs your current location to find visible ISS passes near you.</string>
    <string name="sky_path_unable_to_load_passes">Unable to load passes</string>
    <string name="sky_path_unable_to_load_passes_message">We could not get upcoming ISS passes. Check your connection and try again.</string>
    <string name="sky_path_no_visible_passes">No visible passes found</string>
    <string name="sky_path_no_visible_passes_message">No visible ISS passes are expected for your location in the next 10 days. Try refreshing later or checking alerts for future opportunities.</string>
    <string name="sky_path_location_permission_required">Location permission is required to show ISS passes.</string>
    <string name="current_location">Current Location</string>
    <string name="could_not_retrieve_location">Could not retrieve location.</string>
    <string name="location_permission_denied">Location permission denied.</string>
    <string name="info">Info</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="permission_granted_schedule_notifications">Permission granted! You can now schedule notifications.</string>
    <string name="enable_notifications_for_pass_alerts">Enable notifications in app settings to schedule ISS pass alerts.</string>
    <string name="permission_required">Permission Required</string>
</resources>