<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Map">
        <androidx.preference.SeekBarPreference
            android:defaultValue="9"
            android:key="refresh_Rate"
            android:max="30"
            android:summary="@string/refreshSummary"
            android:title="@string/refreshTitle"
            app:min="1"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="lock_ISS"
            android:summary="@string/lockSummary"
            android:title="@string/lockTitle" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Customization">
        <androidx.preference.SeekBarPreference
            android:defaultValue="3"
            android:key="decimalType"
            android:summary="@string/decimalSummary"
            android:title="@string/decimalTitle"
            android:max="10"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <androidx.preference.SeekBarPreference
            android:defaultValue="5"
            android:key="sizeType"
            android:summary="@string/sizeSummary"
            android:title="@string/sizeTitle"
            android:max="30"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <androidx.preference.SeekBarPreference
            android:defaultValue="12"
            android:key="textSizeType"
            android:summary="@string/textSizeSummary"
            android:title="@string/textSizeTitle"
            android:max="30"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

    </PreferenceCategory>
</PreferenceScreen>